SERVER-79176 Make index build abort uninterruptible